2017-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* R/parseToml.R: Output from print.toml() method without final NULL

        * tests/arrays.Rout.save: Updated reference output
        * tests/bool_datetime.Rout.save: Idem
        * tests/float.Rout.save: Idem
        * tests/integer.Rout.save: Idem
        * tests/strings.Rout.save: Idem
        * tests/tables.Rout.save: Idem
        * tests/tomlExamples.Rout.save: Idem

2017-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/parse.cpp (tomlparseImpl): Suppport TOML parsing from a
	character variable (with thanks to Charles for a hint in #7)

	* R/parseToml.R (parseTOML): Additional argument to select
	filemode (default) or parse from character

	* man/parseTOML.Rd: Document new argument

2017-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version

	* src/parse.cpp: Extended to support local_date(time)

	* inst/toml/ex2.toml: Extended for new types

2017-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream

2017-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.1.0

	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream

	* src/parse.cpp: Added copyright header
	* R/parseToml.R: Idem

	* .travis.yml: Switch to using run.sh for Travis CI

	* README.md: Updated

	* inst/NEWS.Rd: Added

2017-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version
	(BugReports, URL): Added

	* src/parse.cpp (local_timegm): Restore parts of old behaviour

	* src/Makevars.win: Added

	* .travis.yml: Use trusty, also dump logs on failure

2017-01-03  Devin Pastoor  <devin.pastoor@gmail.com>

	* src/parse.cpp (local_timegm): On Windows, use Rcpp::mktime00 (as
	suggested by Dirk in GitHub Issue #5)

2015-12-19  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Release 0.0.5

2015-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream
